Pack sprites into spritesheets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ link_directories(/usr/local/Cellar/assimp/5.0.0/lib)
 link_directories(/usr/local/Cellar/embree/3.6.1/lib)
 link_directories(/usr/local/Cellar/assimp/5.0.0/lib)
 
-add_executable(makeride src/main.c src/project.c)
+add_executable(makeride src/main.c src/project.c src/pack.c)
 set_property(TARGET makeride PROPERTY C_STANDARD 99)
-target_link_libraries (makeride m ${PNG_LIBRARY} Image IsoRender assimp embree3 jansson)
+target_link_libraries (makeride m ${PNG_LIBRARY} Image IsoRender assimp embree3 jansson zip)
 
