--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,12 @@
+
 cmake_minimum_required (VERSION 3.1)
 project (RCT2RideGen C)
 
 find_package(PNG REQUIRED)
 find_package(ZLIB REQUIRED)
+find_package(assimp REQUIRED)
+find_package(embree REQUIRED)
+find_package(libzip REQUIRED)
 
 include_directories(${PNG_INCLUDE_DIRS} ${ZLIB_INCLUDE_DIRS} ../libIsoRender/src)
 link_directories(${PNG_LIBRARY_DIRS} ${ZLIB_LIBRARY_DIRS} ../libIsoRender)
@@ -12,10 +16,12 @@ set_property(TARGET makevehicle PROPERTY C_STANDARD 99)
 
 #Use static libpng and zlib on Windows because the dynamic version doesn't work for some reason
 IF (WIN32)
-	target_link_libraries (makevehicle png.a z.a)
+	target_link_libraries(makevehicle png.a z.a)
 ELSE()
-	target_link_libraries (makevehicle ${PNG_LIBRARIES} ${ZLIB_LIBRARIES})
+	target_link_libraries(makevehicle ${PNG_LIBRARY_DIRS} ${ZLIB_LIBRARY_DIRS})
 ENDIF()
 
-target_link_libraries (makevehicle m zip assimp embree3 jansson IsoRender)
+target_link_libraries(makevehicle)
+
+target_link_libraries (makevehicle m IsoRender libzip assimp::assimp embree jansson)
 
