--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,6 @@ project (RCT2RideGen C)
 
 find_package(PNG REQUIRED)
 find_package(ZLIB REQUIRED)
-find_package(assimp REQUIRED)
-find_package(embree REQUIRED)
-find_package(libzip REQUIRED)
 
 include_directories(${PNG_INCLUDE_DIRS} ${ZLIB_INCLUDE_DIRS} ../libIsoRender/src)
 link_directories(${PNG_LIBRARY_DIRS} ${ZLIB_LIBRARY_DIRS} ../libIsoRender)
@@ -15,11 +12,7 @@ add_executable(makevehicle src/main.c src/project.c)
 set_property(TARGET makevehicle PROPERTY C_STANDARD 99)
 
 #Use static libpng and zlib on Windows because the dynamic version doesn't work for some reason
-IF (WIN32)
-	target_link_libraries(makevehicle png.a z.a)
-ELSE()
-	target_link_libraries(makevehicle ${PNG_LIBRARY} ${ZLIB_LIBRARY})
-ENDIF()
+target_link_libraries(makevehicle ${PNG_LIBRARY} ${ZLIB_LIBRARY})
 
-target_link_libraries (makevehicle m IsoRender libzip::zip assimp::assimp embree jansson)
+target_link_libraries (makevehicle m IsoRender zip assimp embree3 jansson)
 
